--- a/assets/less/whatsnew-128.less
+++ b/assets/less/whatsnew-128.less
@@ -194,7 +194,7 @@ p {
       margin-right: 0;
       margin-left: auto;
 
-      svg {
+      img {
         width: 100%;
         height: 100%;
       }
@@ -220,10 +220,12 @@ p {
     width: 18.75rem;
     display: flex;
 
+
     .feature {
       position: relative;
       left: 1rem;
       height: 100%;
+      flex-shrink: 0;
     }
 
     .content {
@@ -416,7 +418,7 @@ p {
     }
 
 
-    .picture svg {
+    .picture img {
       max-width: 100% !important;
       width: 100% !important;
       height: 100% !important;
@@ -450,7 +452,7 @@ p {
     }
 
     .nebula-branding {
-      svg {
+      img {
         width: 100%;
         height: 100%;
       }
@@ -493,7 +495,7 @@ p {
     }
 
     .nebula-branding {
-      svg {
+      img {
         width: 100%;
         height: 100%;
       }
