Various whatnew 128 style fixes

--- a/assets/less/appeal-128.less
+++ b/assets/less/appeal-128.less
@@ -393,7 +393,7 @@ main {
  * Media Queries
  */
 
-@media (max-width: 1000px) {
+@media (max-width: @lg) {
   #appeal-header {
     padding-top: 4rem;
     position: static;
@@ -428,7 +428,7 @@ main {
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: @sm) {
 
   main {
     padding: 0;
@@ -456,7 +456,7 @@ main {
   }
 }
 
-@media (max-width: 512px) {
+@media (max-width: @xs) {
   #footer.container {
     padding-inline: 0.25rem;
     padding-block: 32px;
