--- a/assets/less/whatsnew-128.less
+++ b/assets/less/whatsnew-128.less
@@ -195,6 +195,7 @@ p {
       margin-left: auto;
 
       img {
+        max-width: 36.25rem;
         width: 100%;
         height: 100%;
       }
@@ -465,6 +466,10 @@ p {
   }
 
   .pre-footer {
+    max-width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+
     .three-column {
       flex-direction: column;
 
