Hide space things

--- a/assets/less/whatsnew-128.less
+++ b/assets/less/whatsnew-128.less
@@ -388,15 +388,17 @@ p {
   .two-column.fast-and-fluid .copy,
   .two-column.rust-revolution .copy {
     margin-left: 1rem;
+
   }
 }
 
 @media (max-width: @lg) {
   .appeal-welcome {
     .nebula-branding {
-      margin: -4.5rem auto 4.375rem;
+      margin: 4.8125rem auto 4.375rem;
     }
 
+    .space-things,
     .screenshot-128 {
       display: none;
     }
