Fix rust logo positioning

--- a/assets/less/whatsnew-128.less
+++ b/assets/less/whatsnew-128.less
@@ -209,9 +209,8 @@ p {
 }
 
 .right-wrap {
-  margin-right: 0;
-  margin-left: auto;
-  margin-bottom: -1rem;
+  margin: -28.5rem 0 -1rem auto;
+  z-index: 1;
 
   img {
     max-width: 36.25rem;
@@ -445,6 +444,7 @@ p {
   }
 
   .right-wrap {
+    margin-top: 0;
     margin-bottom: -6rem;
   }
 
