--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -207,14 +207,17 @@ button {
 .download-button .os_msi,
 .download-button .os_winsha1,
 .download-button .os_win64,
+.download-button .os_win8-64,
 .download-button .os_linux,
 .download-button .os_linux64,
-.win7up.x86.x64 .download-button .os_win,
+.win7-8.x86.x64 .download-button .os_win8,
+.win10up.x86.x64 .download-button .os_win,
 .android .download-button-desktop,
 .windows.arm .download-button .os_win,
 .linux.arm .download-button .os_linux,
 .linux.x86.x64 .download-list .os_linux,
 .download-button .os_win,
+.download-button .os_win8,
 .download-button .os_osx,
 .download-button .os_android,
 .download-button .os_ios,
@@ -223,10 +226,12 @@ button {
   display: none !important;
 }
 
-.win7up.x86.x64 .download-button .os_win64,
+.win7-8.x86 .download-button .os_win8,
+.win7-8.x86.x64 .download-button .os_win8-64,
+.win10up.x86.x64 .download-button .os_win64,
+.win10up.x86 .download-button .os_win,
 .linux .download-button .os_linux,
 .linux.x86.x64 .download-button .os_linux64,
-.windows .download-button .os_win,
 .osx .download-button .os_osx,
 .android .download-button .os_android,
 .download-button-android .os_android,
