--- a/assets/less/pages/releases.less
+++ b/assets/less/pages/releases.less
@@ -1,7 +1,11 @@
 .page-releases {
+  .release-list {
+    width: 100%;
+  }
+
   .release-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: start;
     gap: 1rem;
     border-bottom: var(--border-size) solid;
@@ -23,10 +27,25 @@
   }
 
   .release-minors {
+    width: 100%;
+  }
+
+  .release-minors ul {
+    width: 100%;
+    max-height: 10rem;
+
+    padding-left: 2rem;
+    padding-right: 2rem;
     display: flex;
     gap: 0.5rem;
     flex-wrap: wrap;
+    flex-direction: column;
+    align-items: start;
+    list-style: none;
+    line-height: 1.5;
+    margin: auto;
   }
+
 
   .two-columns {
     display: flex;
@@ -42,5 +61,13 @@
     width: 4rem;
     text-align: right;
     align-items: center;
+  }
+
+  @media (max-width: @md) {
+    .release-minors ul {
+      padding: 0;
+      flex-direction: row;
+      max-height: none;
+    }
   }
 }
