--- a/assets/less/pages/releases.less
+++ b/assets/less/pages/releases.less
@@ -24,6 +24,7 @@
     font-size: 150%;
     min-width: 15%;
     margin-top: 0;
+    text-align: left;
   }
 
   .release-minors {
@@ -31,15 +32,13 @@
   }
 
   .release-minors ul {
-    width: 100%;
-    max-height: 10rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
 
+    width: 100%;
     padding-left: 2rem;
     padding-right: 2rem;
-    display: flex;
     gap: 0.5rem;
-    flex-wrap: wrap;
-    flex-direction: column;
     align-items: start;
     list-style: none;
     line-height: 1.5;
@@ -63,10 +62,9 @@
     align-items: center;
   }
 
-  @media (max-width: @md) {
+  @media (max-width: @sm) {
     .release-minors ul {
       padding: 0;
-      flex-direction: row;
       max-height: none;
     }
   }
