--- a/assets/less/pages/releases.less
+++ b/assets/less/pages/releases.less
@@ -1,7 +1,11 @@
 .page-releases {
+  .release-list {
+    width: 100%;
+  }
+
   .release-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: start;
     gap: 1rem;
     border-bottom: var(--border-size) solid;
@@ -20,13 +24,27 @@
     font-size: 150%;
     min-width: 15%;
     margin-top: 0;
+    text-align: left;
   }
 
   .release-minors {
-    display: flex;
-    gap: 0.5rem;
-    flex-wrap: wrap;
+    width: 100%;
   }
+
+  .release-minors ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+
+    width: 100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    gap: 0.5rem;
+    align-items: start;
+    list-style: none;
+    line-height: 1.5;
+    margin: auto;
+  }
+
 
   .two-columns {
     display: flex;
@@ -42,5 +60,12 @@
     width: 4rem;
     text-align: right;
     align-items: center;
+  }
+
+  @media (max-width: @sm) {
+    .release-minors ul {
+      padding: 0;
+      max-height: none;
+    }
   }
 }
