Adjust flow and spacing of minor versions on all releases.

--- a/assets/less/pages/releases.less
+++ b/assets/less/pages/releases.less
@@ -33,7 +33,10 @@
 
   .release-minors ul {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(5.5rem, 1fr));
+    grid-template-rows: repeat(6, max-content);
+    grid-auto-flow: column;
+    text-align: left;
 
     width: 100%;
     padding-left: 2rem;
