--- a/sites/www.thunderbird.net/includes/base/base.html
+++ b/sites/www.thunderbird.net/includes/base/base.html
@@ -69,7 +69,9 @@
 
     <main>
       {% block pre_content %}{% endblock %}
+      <div id="main-content">
       {% block content %}{% endblock %}
+      </div>
       {% block post_content %}{% endblock %}
     </main>
 
