Fix 32-bit Windows and Linux builds from not being downloadable.
The javascript download uses the no-javascript download buttons for
their links. And previously we split the row based on 32-bit builds,
however with the addition of Windows 7/8.1 compat builds it pushes the
array slice over the limit and cuts off a few builds.

Fixes #634

--- a/sites/www.thunderbird.net/includes/_enonly/product-all-macros.html
+++ b/sites/www.thunderbird.net/includes/_enonly/product-all-macros.html
@@ -68,13 +68,8 @@
     </h4>
     <div class="product-row-downloads">
       <div class="download-button download-button-page">
-        {% for p_name, p_label in (platforms|list())[:4] %}
+        {% for p_name, p_label in (platforms|list()) %}
           {{ build_button(build, p_name, _('Download for %(platform)s in %(locale)s')|format(platform=p_label|replace('\n', ' '), locale=build.name_en), _('%(platform)s')|format(platform=p_label|replace('\n', ' '))) }}
-        {% endfor %}
-      </div>
-      <div class="download-button download-button-page">
-        {% for p_name, p_label in (platforms|list())[-2:] %}
-          {{ build_link(build, p_name, _('Download for %(platform)s in %(locale)s')|format(platform=p_label|replace('\n', ' '), locale=build.name_en), _('%(platform)s')|format(platform=p_label|replace('\n', ' '))) }}
         {% endfor %}
       </div>
     </div>
