Update English homepage assets.

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -428,6 +428,8 @@ section {
   z-index: 3;
 }
 
+/*
+// Paused for now!
 .carousel > picture:last-child {
   opacity: 0;
   animation-duration: 30s;
@@ -435,6 +437,7 @@ section {
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
+*/
 
 .fill-current {
   display: none;
