Move the donation faq up and expand contact us by default.

--- a/sites/www.thunderbird.net/includes/faq.html
+++ b/sites/www.thunderbird.net/includes/faq.html
@@ -226,7 +226,7 @@
     </p>
   </details>
 
-  <details class="accordion">
+  <details class="accordion" open="open">
     <summary class="question">
       {{ _('Contact us') }}
     </summary>
