Add the thunderbird desktop privacy policy to the website.

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -31,6 +31,7 @@
 @import "./pages/newsletter.less";
 @import "./pages/donations-help.less";
 @import "./pages/holiday.less";
+@import './pages/privacy.less';
 
 // Appeal Page imports - These should be split off into their own bundles at some point
 @import "./pages/survey.less";
