Set privacy to enus only

--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -36,7 +36,7 @@
           <li><a href="{{ url('thunderbird.about') }}" class="dotted">{{_('Who We Are')}}</a></li>
           <li><a href="{{ url('thunderbird.contact') }}" class="dotted">{{_('Contact Us')}}</a></li>
           <li><a href="{{ url('mozorg.careers.tb') }}" class="dotted">{{_('Careers')}}</a></li>
-          <li><a href="{{ url('privacy.notices.thunderbird') }}" class="dotted">{{_('Thunderbird Privacy')}}</a></li>
+          <li><a href="{{ url('thunderbird.privacy') }}" class="dotted">{{_('Thunderbird Privacy')}}</a></li>
         </ul>
       </div>
       <div class="site-link-section">
