Adjustments to allow monthly releases (Or "Releases") to be downloaded.
* Add a DEFAULT_RELEASE_VERSION and use that for any version defaults.
* Some pre-built metadata for javascript.
* Add a warning about Thunderbird Releases.

--- a/sites/www.thunderbird.net/includes/base/base.html
+++ b/sites/www.thunderbird.net/includes/base/base.html
@@ -54,6 +54,7 @@
     <script>
       window.siteLocale = "{{ LANG }}";
     </script>
+    {% include 'includes/javascript-metadata.html' %}
   </head>
 
   <body {% if self.body_id() %}id="{% block body_id %}{% endblock %}" {% endif %}class="html-{{ DIR }} {% block body_class %}{% endblock %}" {% block body_attrs %}{% endblock %}>
