--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -42,8 +42,12 @@
     max-inline-size: 50.5rem;
 
     .sub-tag {
-      max-inline-size: 38rem;
+      font-weight: 300;
+      max-inline-size: 30rem;
       margin: auto;
+      strong {
+        font-weight: 500;
+      }
     }
   }
 
@@ -123,9 +127,31 @@
     filter: drop-shadow(0 0 50px var(--color-orange-30));
   }
 
+  #freedom-to-go-anywhere {
+    position: relative;
+
+    .mobile-render {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 39.0625rem;
+      // Shift-up so we're not affected by the mask
+      position: relative;
+      bottom: 4.6875rem;
+    }
+  }
+
 
   #free-your-inbox {
     padding-top: 10px;
+
+    .section-text {
+      margin-bottom: 1.5rem;
+    }
+
+    .container {
+      gap: 0;
+    }
 
     .cta-sub-heading {
       font-family: 'Inter', sans-serif;
