Fix btn-white-bg being transparent

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -270,11 +270,13 @@ button:hover::after {
 }
 
 .btn-white-bg::after {
-  background: var(--color-white);
+  opacity: 1 !important;
+  background: var(--color-white) !important;
 }
 
 .btn-black-bg::after {
-  background: var(--color-black);
+  opacity: 1 !important;
+  background: var(--color-black) !important;
 }
 
 .btn-black-bg:hover,
