Add products to navbar, move download link, and update the downloads page title

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -29,16 +29,8 @@
   padding: 0;
 }
 
-// Just some temp styling
-.header-download {
+.header-donate, .header-download {
   font-weight: 500;
-
-  .download-link.btn-download:after {
-    background: transparent;
-  }
-}
-
-.header-donate {
   margin-top: -0.05rem;
   margin-left: -1rem;
 
