--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -323,3 +323,11 @@ button:hover::after {
     display: block;
   }
 }
+
+.download-icon {
+  position: relative;
+  top: 0.1rem;
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+}
