--- a/sites/www.thunderbird.net/includes/download-button.html
+++ b/sites/www.thunderbird.net/includes/download-button.html
@@ -16,6 +16,7 @@
       {% for plat in builds -%}
         <li class="ml-3 mr-3">
           <a href="{{ plat.download_link_direct or plat.download_link }}" class="matomo-track-download download-link {{ button_class }}" data-donate-redirect="download-{{ channel or default_channel }}" data-donate-content="post_download" data-donate-link="{{ redirect_donate_url(content='post_download', download=True, download_channel=channel or default_channel) }}">
+            <span class="download-icon" aria-hidden="true">{{ svg('download') }}</span>
             {{ plat.os_arch_pretty or plat.os_pretty }}
           </a>
         </li>
@@ -83,6 +84,7 @@
           {% if plat.download_link_direct %}
             data-direct-link="{{ plat.download_link_direct }}"
           {% endif %}>
+          <span class="download-icon" aria-hidden="true">{{ svg('download') }}</span>
           {% if alt_copy %}
             {{ alt_copy }}
           {% else %}
