Add mobile section to download page

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -324,6 +324,13 @@ button:hover::after {
   }
 }
 
+// Slimmer for the download page
+// TODO: Can we just remove .download-link and use this instead?
+.btn-slim {
+  min-width: 11.0rem;
+  padding: 0.5rem 1rem;
+}
+
 .download-icon {
   position: relative;
   top: 0.1rem;
