--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -38,12 +38,24 @@
 
   // TODO: Fix this in place
   .download-button-page {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+
     margin-top: 5rem;
+    margin-bottom: 5rem;
     color: var(--txt);
     text-align: center;
 
     a::after {
       background: var(--color-white);
+    }
+  }
+
+  @media (max-width: @lg) {
+    .download-button-page {
+      flex-direction: column;
     }
   }
 
@@ -114,19 +126,36 @@
     h1 {
       margin-top: 0;
     }
+    h2 {
+      // Make these h2s small
+      font-size: 2rem;
+    }
   }
 
-  .beta-badge {
+
+  .new-badge {
     display: inline-block;
     margin-left: 1rem;
     text-align: center;
     border-radius: 0.2rem;
     font-weight: 600;
-    background-color: var(--color-blue-70);
+    background-color: #5265f1; //var(--color-blue-70);
     color: var(--color-white);
     font-size: var(--font-regular);
     line-height: var(--font-2xl);
     width: 4rem;
+    height: 1.33rem;
+    text-transform: uppercase;
+  }
+
+  .split-text {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    @media (max-width: @lg) {
+      justify-content: center;
+      margin-bottom: 0.5rem;
+    }
   }
 
   .platform-release {
@@ -135,6 +164,11 @@
     flex-direction: row;
     gap: 1rem;
     margin-bottom: 1rem;
+
+    h4 {
+      font-weight: 600;
+      margin: 0;
+    }
 
     strong {
       font-weight: 600;
